# fps-infinite

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
ase/: bg.ase  bullet.ase  crosshair.ase  dark-bg.ase  font.ase  gold-sky.ase  materials.aseprite  mockup.ase  new-bg-dither.ase  new-bg.ase  swarm.ase
src/: application.cpp  application.h  game.cpp  game.h  main.cpp  miner.cpp  miner.h  renderer.cpp  renderer.h  rock.cpp  rock.h  tunnel.cpp  tunnel.h  window.h
src/engine/: App.cpp  App.h  AppDebug.cpp  AppDebug.h  Application.cpp  Application.h  Camera3D.cpp  Camera3D.h  Event.cpp  Event.h  GameScene.cpp  GameScene.h  IGameObject.h  Id.h  InputMap.cpp  InputMap.h  MessageTexture.cpp  MessageTexture.h  PixelArray.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  UniqueTexture.cpp  UniqueTexture.h  Window.cpp  Window.h  application.cpp  application.h  renderer.cpp  window.cpp  window.h
src/engine/collision/: Collider.cpp  Collider.h  CollisionManager.h  CollisionShape.cpp  CollisionShape.h
src/engine/game_object/: AEntity.h  AEntity3D.h  Entity3D.h  EntityScene.cpp  EntityScene.h  IGameObject.h
src/engine/sprite/: Sprite.cpp  Sprite.h  Sprite8Dir.cpp  Sprite8Dir.h
src/engine/state_machine/: StateMachine.cpp  StateMachine.h
src/engine/utils/: UColors.cpp  UMath.cpp  URand.cpp  Utils.h
src/game/: ACharacter.h  AmbientParticles.cpp  AmbientParticles.h  CollectionParticle.cpp  CollectionParticle.h  Game.cpp  Game.h  Material.cpp  Material.h  Miner.cpp  Miner.h  Player.cpp  Player.h  Tunnel.cpp  Tunnel.h  game.cpp  material.cpp  material.h  miner.cpp  miner.h  tunnel.cpp  tunnel.h
src/game/characters/: ACharacter.h  Bullet.cpp  Bullet.h  Eye.cpp  Eye.h  Player.cpp  Player.h
src/game/miner/: Miner.cpp  Miner.h  MinerStates.h
src/game/miner/states/: StateDig.cpp  StateFall.cpp
src/game/ui/: UiGameplay.cpp  UiGameplay.h
src/game_setup/: ColliderGroups.cpp  ColliderGroups.h
